# short_drama

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  REVIEW.md  VIBE_CODING_LOG.md  config.yaml  pyproject.toml
drama/: __init__.py  config.py  llm.py  notify.py  orchestrator.py  review.py  state.py
drama/agents/: __init__.py  base.py  director.py  discovery.py  storyboard.py  visual_qa.py  writer.py
drama/executors/: __init__.py  audio.py  base.py  compose.py  img2video.py  sourcing.py  text2img.py
drama/prompts/: director.md  discovery.md  storyboard.md  visual_qa.md  writer.md
drama/utils/: cost_tracker.py  retry.py
projects/三官/: 00_项目总览.md  00_项目说明.md  project.yaml
projects/三官/.state/: ep01.yaml
projects/三官/01_框架/: 价值观差异与改编方案.md  整体框架.md
projects/三官/02_人物/: 商三官.yaml  赵世豪.yaml
projects/三官/03_剧本/第一幕_灭门/: ep01.md
projects/三官/04_分镜/第一幕_灭门/: ep01_storyboard.md  epT_storyboard.md
projects/三官/05_美术/风格定调/: 风格定调.md
projects/三官/09_制作日志/: cost_report.yaml
projects/三官/reference/: 原著原文.md
references/: agent_architecture.md  ai_manga_drama_pipeline.md  three_core_challenges.md  女娲PRD_借鉴对照.md  投手素材平台分析.md  模型选型_2026-06.md  短剧投流体系.md  系统层面分析.md
templates/: character_card.yaml  i2v_prompt.yaml  project.yaml  state.yaml  t2i_prompt.yaml
